<resources>
    <string name="app_name">lesson1</string>
    <string name="Button2">Первая часть</string>
    <string name="name">Name</string>
    <string name="Button">Вторая часть</string>
    <string name="textview">TextView</string>
    <string name="edittext">EditText</string>
    <string name="checkbox">CheckBox</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
</resources>