<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aguafina_script"
            android:gravity="center_horizontal"
            android:text="@string/textview"
            android:textColor="#FF0000"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edittext"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="Switch"
            android:textColor="@color/design_default_color_primary"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/checkbox"
            android:textColor="@android:color/holo_orange_light" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:fontFamily="@font/bangers"
            android:text="@string/togglebutton"
            android:textColor="@color/purple_200" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>